gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/reg6769.d
version https://git-lfs.github.com/spec/v1
oid sha256:d70da45f954e3bb37cc447f50472e54cb4891c09e20adadd21f7c1fddf5c730a
size 991
